@@ -46,6 +46,11 @@ triggering of step-across in <code>capscale(..., metaMDSdist =
 
 
 <ul>
+<li> <p><code>ordiarrows</code> and <code>ordisegments</code> gained argument
+<code>order.by</code> to give a variable used to sort points within
+<code>groups</code>. Earlier the points were assumed to be in order.
+</p>
+</li>
 <li><p> Function <code>ordispider</code> invisibly returns the
 coordinates to which the points are connected.  Typically these
 are class centroids for each point, but for constrained
