@@ -4,6 +4,7 @@ VEGAN RELEASE VERSIONS at http://cran.r-project.org/
 
 Version 2.0-2 (opened October 20, 2011)
 
+	* merge r1985: ordiarrows, ordisegments gained arg 'order.by'.
 	* merge r1974,1975,1980,1982: FAQ update.
 	* merge r1970: ordispider returns invisible plotting structure.
 	* merge r1969: ordiplot3d.Rd tells about xyz.convert().
